# cse571-asu

./: .gitignore  Data_Loaders.py  LICENSE  Networks.py  README.md  collect_data.py  pyproject.toml  submission.csv  train_model.py
saved/: best_model.pkl  saved_model.pkl  scaler.pkl
week1/: collect_data.py  submission.csv
