[tool.poetry]
name = "cse571-asu"
version = "0.1.0"
description = ""
authors = ["Sangjoon Han <jphan32@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.1"
pymunk = "^5.7.0"
pygame = "^2.5.2"
noise = "^1.2.2"
matplotlib = "^3.8.0"
pandas = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
