[tool.poetry]
name = "cse571-asu"
version = "0.1.0"
description = ""
authors = ["Sangjoon Han <jphan32@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pymunk = "^5.7.0"
pygame = "^2.5.2"
noise = "^1.2.2"
matplotlib = "^3.8.0"
pandas = "^2.1.2"
numpy = ">=1.26.0,<2"
torch = {version = "^2.1.0+cu118", source = "pytorch"}
torchvision = {version = "^0.16.0+cu118", source = "pytorch"}
tqdm = "^4.66.1"
scikit-learn = "^1.3.2"
wandb = "^0.16.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
